# frai

./: .gitignore  README.md
backend/: Makefile  TESTING.md  env.example  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  test.env  test_main.py
backend/app/: __init__.py  ai_client.py  config.py  contract_engine.py  database.py  models.py  prompt.py
frontend/: env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  wrangler.jsonc  wrangler.toml
frontend/src/: App.tsx  index.css
frontend/src/components/: ContractDisplay.tsx  ContractForm.tsx  ContractGenerator.tsx  Footer.tsx  Header.tsx
frontend/src/types/: index.ts
